@@ -64,6 +64,7 @@ source-code: "tabs" instead of "spaces"
 - fixed: loading packages
 - fixed: callback error in MailMessage
 - fixed: TPM restore package
+- fixed: Utils.request() --> double calling of callback()
 
 - replaced: (IMPORTANT) `uri` to `url` in F.problems, F.changes, F.errors (saves memory)
 
